# gym-time-clock-api

./: .example.secrets.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 90ab9631f240_table_work.py
src/adapters/: databases.py  orm.py
src/adapters/repositories/: __init__.py  work.py
src/commons/abstracts/: repository.py  sqlalchemy.py  unity_of_work.py
src/commons/domain/: entities.py  exceptions.py  value_objects.py
src/commons/logger/: logger.py
src/commons/middleware/: middleware.py
src/domain/work/entity/: work.py
src/infrastructure/api/: v1.py
src/infrastructure/api/routers/: health_check.py  work.py
src/infrastructure/api/schemas/: __init__.py  health_check.py  work.py
src/infrastructure/services/: health_check.py  uow.py  work.py
tests/unittest/commons/domain/: test_unit_entities.py  test_unit_value_objects.py
tests/unittest/domain/work/: test_unit_entities.py
