[tool.poetry]
name = "gym-time-clock-api"
version = "0.1.0"
description = ""
authors = ["moreirak14 <kaiquemoreiracloud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.11"
alembic = "^1.8.1"
mysql-connector-python = "^8.0.30"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.15.3"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
